added project 2 to portfolio and made styling changes to font and text in portfolio page

--- a/contacts.html
+++ b/contacts.html
@@ -9,15 +9,15 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="Assets/CSS/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Cinzel+Decorative:wght@400;700&display=swap"
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Marcellus+SC&display=swap"
         rel="stylesheet">
 </head>
 
 <body>
     <div class="wallpaper">
         <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" id="logo-name" href="#">
+            <a class="navbar-brand" id="logo-name" href="index.html">
                 Aleksandr Kimball-Moreno
             </a>
             <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNav"
