--- a/portfolio.html
+++ b/portfolio.html
@@ -9,15 +9,15 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="Assets/CSS/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Cinzel+Decorative:wght@400;700&display=swap"
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Marcellus+SC&display=swap"
         rel="stylesheet">
 </head>
 
 <body>
     <div class="wallpaper">
         <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" id="logo-name" href="#">
+            <a class="navbar-brand" id="logo-name" href="index.html">
                 Aleksandr Kimball-Moreno
             </a>
             <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -79,15 +79,22 @@
                                     https://github.com/vantango/uw-project1-parksky-app/raw/development/assets/img/screencapture.png?raw=true"
                                         alt="parksky-app-image" class="img-thumbnail">
                                 </a>
-                                <a href="https://github.com/vantango/uw-project1-parksky-app">GitHub</a>
+                                <p class="portfolioText">Visit the repository on <a
+                                        href="https://github.com/vantango/uw-project1-parksky-app"
+                                        target="_blank">GitHub</a>!</p>
                             </div>
                             <div class="col-lg-4 col-sm-6">
-                                <h3 class=img-caption>Weather Dashboard</h3>
-                                <a href="https://vantango.github.io/weather-dashboard/" target="_blank">
-                                    <img src="https://github.com/vantango/weather-dashboard/raw/main/images/weather-dashboard.png?raw=true"
-                                        alt="weather-dashboard-image" class="img-thumbnail">
+                                <h3 class=img-caption>So Thirsty</h3>
+                                <a href="https://sothirstyproject.herokuapp.com/" target="_blank">
+                                    <img src="https://github.com/Calmanning/so_thirsty/raw/dev/public/assets/images/giphy.webp?raw=true"
+                                        alt="so-thirsty-plant-profile-gif" class="img-thumbnail">
+                                    <img class="soThirsty"
+                                        src="https://github.com/Calmanning/so_thirsty/raw/dev/public/assets/images/screenshot2.png?raw=true"
+                                        alt="plant-profile-screenshot" class="img-thumbnail">
                                 </a>
-                                <a href="https://github.com/vantango/weather-dashboard">GitHub</a>
+                                <p class="portfolioText">Visit the repository on <a
+                                        href="https://github.com/Calmanning/so_thirsty" target="_blank">GitHub</a>!
+                                </p>
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <h3 class=img-caption>History Quiz</h3>
@@ -95,7 +102,9 @@
                                     <img src="https://github.com/vantango/code-quiz/raw/main/images/worldhistoryquiz.PNG?raw=true"
                                         alt="history-quiz-image" class="img-thumbnail">
                                 </a>
-                                <a href="https://github.com/vantango/code-quiz">GitHub</a>
+                                <p class="portfolioText">Visit the repository on <a
+                                        href="https://github.com/vantango/code-quiz" target="_blank">GitHub</a>!
+                                </p>
                             </div>
                         </div>
                     </section>
