--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="Assets/CSS/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Marcellus+SC&display=swap"
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Marcellus+SC&family=Overlock+SC&display=swap"
         rel="stylesheet">
 </head>
 
@@ -79,7 +81,8 @@
                                     I am an aspiring full stack web developer currently enrolled in the Web Development
                                     Boot
                                     Camp at University of Washington. Combining my background in the automotive industry
-                                    with my newfound skills in JavaScript, jQuery, HTML, and CSS, I want to create
+                                    with my newfound skills in JavaScript, HTML, CSS, jQuery, AJAX, NodeJS, ExpressJS,
+                                    MySQL, Sequelize, and MongoDB, I want to create
                                     innovative and engaging applications that provide a high-quality user experience
                                     with
                                     lightweight and efficient deployments.
