--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="Assets/CSS/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Marcellus+SC&display=swap"
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Marcellus+SC&family=Overlock+SC&display=swap"
         rel="stylesheet">
 </head>
 
