--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"
-                            href="https://github.com/vantango/my-portfolio-v1/raw/main/Assets/Images/ALEKSANDRA_KIMBALLMORENO_Resume.PDF"
+                            href="https://github.com/vantango/my-portfolio-v1/raw/main/Assets/Images/Resume FINALIZED (2-5-21).pdf"
                             download>
                             Resume
                         </a>
