edited about me section

--- a/index.html
+++ b/index.html
@@ -79,21 +79,16 @@
                                     class="img-responsive" alt="picture-of-aleks">
                                 <p>
                                     I am an aspiring full stack web developer currently enrolled in the Web Development
-                                    Boot
-                                    Camp at University of Washington. Combining my background in the automotive industry
-                                    with my newfound skills in JavaScript, HTML, CSS, jQuery, AJAX, NodeJS, ExpressJS,
-                                    MySQL, Sequelize, and MongoDB, I want to create
-                                    innovative and engaging applications that provide a high-quality user experience
-                                    with
-                                    lightweight and efficient deployments.
+                                    Boot Camp at University of Washington. Combining my background in the automotive
+                                    industry with my newfound skills in JavaScript, HTML, CSS, jQuery, AJAX, NodeJS,
+                                    ExpressJS, MySQL, Sequelize, and MongoDB, I want to create innovative and engaging
+                                    applications that provide a high-quality user experience with lightweight and
+                                    efficient functionality.
                                 </p>
                                 <p>
-                                    I am a highly motivated self-starter with a
-                                    proven track record in fast paced, team-focused environments. I am constantly
-                                    seeking to
-                                    leverage my keen communication abilities to take on new challenges while learning
-                                    and
-                                    developing new skill sets.
+                                    I am a highly motivated self-starter with a proven track record in collaborative,
+                                    team-focused environments. I am constantly seeking to leverage my keen communication
+                                    abilities to take on new challenges while learning and developing new skill sets.
                                 </p>
                             </div>
                         </div>
