--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         </h1>
                         <hr class="my-4">
                         <div class="row">
-                            <div class="col-4 col-8">
+                            <div class="col-12">
                                 <img src="https://media-exp1.licdn.com/dms/image/C5603AQFYRkBfcnElgA/profile-displayphoto-shrink_200_200/0/1609885611907?e=1615420800&v=beta&t=QDQ5EV3UPe-2TB8MKyEWHY_BfjubdWGkFlj4wuI1mG4"
                                     class="img-responsive" alt="picture-of-aleks">
                                 <p>
