added react to about me and added employee directory to portfolio page

--- a/index.html
+++ b/index.html
@@ -17,86 +17,86 @@
 </head>
 
 <body>
-    <div class="wallpaper">
-        <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" id="logo-name" href="#">
-                Aleksandr Kimball-Moreno
-            </a>
-            <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon navbar-dark"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">
-                            About Me
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">
-                            Portfolio
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/vantango" target="_blank">
-                            GitHub
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.linkedin.com/in/aleksandr-kimball-moreno-a7026850/"
-                            target="_blank">
-                            LinkedIn
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link"
-                            href="https://github.com/vantango/my-portfolio-v1/raw/main/Assets/Images/Resume FINALIZED (2-5-21).pdf"
-                            download>
-                            Resume
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contacts.html">
-                            Contact
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+    <!-- <div class="wallpaper"> -->
+    <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" id="logo-name" href="#">
+            Aleksandr Kimball-Moreno
+        </a>
+        <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon navbar-dark"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">
+                        About Me
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">
+                        Portfolio
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://github.com/vantango" target="_blank">
+                        GitHub
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.linkedin.com/in/aleksandr-kimball-moreno-a7026850/"
+                        target="_blank">
+                        LinkedIn
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link"
+                        href="https://github.com/vantango/my-portfolio-v1/raw/main/Assets/Images/Resume FINALIZED (2-5-21).pdf"
+                        download>
+                        Resume
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contacts.html">
+                        Contact
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-        <main class="container">
-            <div class="row">
-                <div class="col-md-12 col-sm" id="about">
-                    <section class="jumbotron">
-                        <h1 class="display-4">
-                            About Me
-                        </h1>
-                        <hr class="my-4">
-                        <div class="row">
-                            <div class="col-12">
-                                <img src="https://media-exp1.licdn.com/dms/image/C5603AQFYRkBfcnElgA/profile-displayphoto-shrink_200_200/0/1609885611907?e=1615420800&v=beta&t=QDQ5EV3UPe-2TB8MKyEWHY_BfjubdWGkFlj4wuI1mG4"
-                                    class="img-responsive" alt="picture-of-aleks">
-                                <p>
-                                    I am an aspiring full stack web developer currently enrolled in the Web Development
-                                    Boot Camp at University of Washington. Combining my background in the automotive
-                                    industry with my newfound skills in JavaScript, HTML, CSS, jQuery, AJAX, NodeJS,
-                                    ExpressJS, MySQL, Sequelize, and MongoDB, I want to create innovative and engaging
-                                    applications that provide a high-quality user experience with lightweight and
-                                    efficient functionality.
-                                </p>
-                                <p>
-                                    I am a highly motivated self-starter with a proven track record in collaborative,
-                                    team-focused environments. I am constantly seeking to leverage my keen communication
-                                    abilities to take on new challenges while learning and developing new skill sets.
-                                </p>
-                            </div>
+    <main class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-12" id="about">
+                <section class="jumbotron">
+                    <h1 class="display-4">
+                        About Me
+                    </h1>
+                    <hr class="my-4">
+                    <div class="row">
+                        <div class="col-12">
+                            <img src="https://media-exp1.licdn.com/dms/image/C5603AQFYRkBfcnElgA/profile-displayphoto-shrink_200_200/0/1609885611907?e=1615420800&v=beta&t=QDQ5EV3UPe-2TB8MKyEWHY_BfjubdWGkFlj4wuI1mG4"
+                                class="img-responsive" alt="picture-of-aleks">
+                            <p>
+                                I am an aspiring full stack web developer currently enrolled in the Web Development
+                                Boot Camp at University of Washington. Combining my background in the automotive
+                                industry with my newfound skills in React, JavaScript, HTML5, CSS3, NodeJS,
+                                MySQL, MongoDB, and more, I want to create innovative and engaging
+                                applications that provide a high-quality user experience with lightweight and
+                                efficient functionality.
+                            </p>
+                            <p>
+                                I am a highly motivated self-starter with a proven track record in collaborative,
+                                team-focused environments. I am constantly seeking to leverage my keen communication
+                                abilities to take on new challenges while learning and developing new skill sets.
+                            </p>
                         </div>
-                    </section>
-                </div>
+                    </div>
+                </section>
             </div>
-        </main>
-    </div>
+        </div>
+    </main>
+    <!-- </div> -->
     <footer class="footer">
         <p class="text-center text-muted">
             &copy; Copyright 2021
