--- a/portfolio.html
+++ b/portfolio.html
@@ -99,13 +99,14 @@
                                 </p>
                             </div>
                             <div class="col-lg-4 col-sm-6">
-                                <h3 class=img-caption>History Quiz</h3>
-                                <a href="https://vantango.github.io/code-quiz/" target="_blank">
-                                    <img src="https://github.com/vantango/code-quiz/raw/main/images/worldhistoryquiz.PNG?raw=true"
+                                <h3 class=img-caption>Employee Directory</h3>
+                                <a href="https://akm-employee-directory.herokuapp.com/" target="_blank">
+                                    <img src="https://media.giphy.com/media/Nf4C36fCatNjlUseZ6/giphy.gif"
                                         alt="history-quiz-image" class="img-thumbnail">
                                 </a>
                                 <p class="portfolioText">Visit the repository on <a
-                                        href="https://github.com/vantango/code-quiz" target="_blank">GitHub</a>!
+                                        href="https://github.com/vantango/employee-directory"
+                                        target="_blank">GitHub</a>!
                                 </p>
                             </div>
                         </div>
